--- a/notion-sdk-android/build.gradle
+++ b/notion-sdk-android/build.gradle
@@ -33,6 +33,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        staging {
+            initWith debug
+            minifyEnabled false
+        }
     }
 
     compileOptions {
